--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 (add new changes on top of this file)
 
+2017-06-06  Franz Holzinger  <franz@ttproducts.de>
+
+    * recreation for TYPO3 7.6
+
 2010-05-05  Franz Holzinger  <franz@ttproducts.de>
 
 	* Initial release
