* Add an import method from one database table to another with an outer join to a category table.

--- a/Resources/Private/Language/locallang_csh.xlf
+++ b/Resources/Private/Language/locallang_csh.xlf
@@ -10,7 +10,7 @@
                 <source>Import Tables wizard</source>
             </trans-unit>
             <trans-unit id="tx_import.description" xml:space="preserve">
-                <source>Enables you to import files into database tables.
+                <source>Enables you to import files and other sources into database tables.
 Just check the tables you need.</source>
             </trans-unit>
         </body>
