--- a/Resources/Private/Language/locallang_csh.xlf
+++ b/Resources/Private/Language/locallang_csh.xlf
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xliff version="1.0" xmlns:t3="http://typo3.org/schemas/xliff">
-   <file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2017-06-03T17:21:00Z" product-name="import">
+<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+	<file source-language="en" datatype="plaintext" original="EXT:import/Resources/Private/Language/locallang_csh.xlf" date="2017-06-03T17:21:00Z" product-name="import">
 		<header/>
 		<body>
-			<trans-unit id="tx_import.importWizard">
+			<trans-unit id="tx_import.importWizard" resname="tx_import.importWizard">
 				<source>Execute the Import Wizard</source>
 			</trans-unit>
-            <trans-unit id="tx_import.alttitle">
+            <trans-unit id="tx_import.alttitle" resname="tx_import.alttitle">
                 <source>Import Tables wizard</source>
             </trans-unit>
-            <trans-unit id="tx_import.description" xml:space="preserve">
+            <trans-unit id="tx_import.description" resname="tx_import.description" xml:space="preserve">
                 <source>Enables you to import files and other sources into database tables.
 Just check the tables you need.</source>
             </trans-unit>
