--- a/Resources/Private/Language/locallang_csh_import.xlf
+++ b/Resources/Private/Language/locallang_csh_import.xlf
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xliff version="1.0" xmlns:t3="http://typo3.org/schemas/xliff">
-	<file t3:id="1415814985" source-language="en" datatype="plaintext" original="messages" date="2011-10-17T20:22:37Z" product-name="import">
+<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+	<file source-language="en" datatype="plaintext" original="EXT:import/Resources/Private/Language/locallang_csh_import.xlf" date="2011-10-17T20:22:37Z" product-name="import">
 		<header/>
 		<body>
-			<trans-unit id="task_class.alttitle" xml:space="preserve">
+			<trans-unit id="task_class.alttitle" resname="task_class.alttitle" xml:space="preserve">
 				<source>Class of the task</source>
 			</trans-unit>
 		</body>
